fix: don't always add a horizontal scrollbar on eighth profile page
Fixes #761

--- a/intranet/static/css/eighth.profile.scss
+++ b/intranet/static/css/eighth.profile.scss
@@ -111,7 +111,7 @@ section.user {
         clear: both;
         padding-top: 20px;
         min-width: 400px;
-        overflow-x: scroll;
+        overflow-x: auto;
 
         > form {
             min-width: 700px;
